# FrameCloud

./: .gitignore  IMPLEMENTATION_SUMMARY.md  Justfile  README.md  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/workflows/: README.md  copilot-setup-steps.yml  quality-checks.yml  test-fast-cross-platform.yml  test-fast-ubuntu.yml  test-slow-cross-platform.yml  test-slow-ubuntu.yml
agc/: 20260202_01_implementation_summary.md  20260202_02_implementation_summary_old.md  20260202_03_protocol_architecture.md  20260204_01_benchmark_usage.md  20260204_02_implementation_summary.md
docs/: voxelmap_usage.md
examples/: protocol_architecture_demo.py
src/framecloud/: __init__.py  _io_utils.py  exceptions.py  protocols.py
src/framecloud/np/: __init__.py  binary_io.py  core.py  las_io.py  numpy_io.py  parquet_io.py  pointcloud_io.py  voxelmap.py
src/framecloud/pd/: __init__.py  binary_io.py  core.py  las_io.py  numpy_io.py  parquet_io.py  pintcloud_io.py  pointcloud_io.py  voxelmap.py
src/framecloud/protocols/: io_protocols.py
tests/: README.md  __init__.py  conftest.py  test_benchmark.py  test_benchmark_voxelmap.py  test_np_voxelmap.py  test_pd_point_cloud.py  test_pd_point_cloud_io.py  test_pd_voxelmap.py  test_point_cloud.py  test_point_cloud_io.py  test_protocol_architecture.py
