[project]
name = "framecloud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "liuzhen19", email = "liuzhen19@xiaomi.com" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "laspy[lazrs]>=2.5.0",
    "pyproj>=3.5.0",
    "pandas>=2.3.3",
    "parquet>=1.3.1",
    "polars[pydantic,openpyxl,sqlalchemy,fsspec]>=1.37.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "orjson>=3.11.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "viztracer>=1.1.1",
]
