[project]
name = "framecloud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "hernandor", email = "lzhen.dev@outlook.com" }]
requires-python = ">=3.10"
dependencies = [
    "laspy[lazrs]>=2.5.0",
    "pyproj>=3.5.0",
    "pandas>=2.3.3",
    "parquet>=1.3.1",
    "polars[pydantic,openpyxl,sqlalchemy,fsspec]>=1.37.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "orjson>=3.11.6",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-benchmark[histogram]>=5.2.3",
    "viztracer>=1.1.1",
]
